--- a/tokutei.html
+++ b/tokutei.html
@@ -73,7 +73,7 @@
             width: 100%;
             border-collapse: collapse;
             margin: 20px 0;
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: transparent;
         }
         th, td {
             border: 1px solid #ccc;
@@ -81,13 +81,13 @@
             text-align: left;
         }
         th {
-            background-color: #F5F5F5;
+            background-color: rgba(245, 245, 245, 0.5);
             color: #5D4037;
             width: 30%;
             font-weight: bold;
         }
         td {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.5);
         }
         .note {
             background-color: #FFF9E6;
@@ -121,30 +121,6 @@
 
     <p>「常世結神社」アプリにおける有料サービス（月額サブスクリプション「月結び」）に関する特定商取引法に基づく表示です。</p>
 
-    <h2>販売業者情報</h2>
-    <table>
-        <tr>
-            <th>販売業者</th>
-            <td>DAIJI IMAI</td>
-        </tr>
-        <tr>
-            <th>所在地</th>
-            <td>請求があった場合、遅滞なく開示いたします</td>
-        </tr>
-        <tr>
-            <th>電話番号</th>
-            <td>請求があった場合、遅滞なく開示いたします</td>
-        </tr>
-        <tr>
-            <th>メールアドレス</th>
-            <td><a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></td>
-        </tr>
-        <tr>
-            <th>運営統括責任者</th>
-            <td>DAIJI IMAI</td>
-        </tr>
-    </table>
-
     <h2>商品・サービスについて</h2>
     <table>
         <tr>
@@ -156,8 +132,8 @@
             <td>
                 月額サブスクリプションサービス<br>
                 ・毎月「五縁玉」62枚を付与<br>
-                ・五縁玉の有効期限: 付与から2ヶ月間（サブスク付与分のみ。広告で取得した五縁玉は期限なし）<br>
-                ・五縁玉の保有上限: 150枚（サブスク付与分のみ。広告分は別枠で管理）
+                ・五縁玉の有効期限: 付与から2ヶ月間（サブスク付与分）<br>
+                ・五縁玉の保有上限: 200枚（サブスク付与分）
             </td>
         </tr>
         <tr>
@@ -176,8 +152,7 @@
             <th>支払方法</th>
             <td>
                 ・Apple App Store（iOS）<br>
-                ・Google Play ストア（Android）<br>
-                ※各ストアに登録されているお支払い方法が利用可能です
+                ※App Storeに登録されているお支払い方法が利用可能です
             </td>
         </tr>
         <tr>
@@ -198,9 +173,8 @@
         <tr>
             <th>解約方法</th>
             <td>
-                各ストアのサブスクリプション管理画面から解約できます<br>
-                ・iOS: 設定 → Apple ID → サブスクリプション<br>
-                ・Android: Google Play ストア → お支払いと定期購入
+                App Storeのサブスクリプション管理画面から解約できます<br>
+                ・iOS: 設定 → Apple ID → サブスクリプション
             </td>
         </tr>
         <tr>
@@ -211,7 +185,7 @@
             <th>返品・返金</th>
             <td>
                 デジタルコンテンツの性質上、お客様都合による返品・返金はお受けできません。<br>
-                返金をご希望の場合は、各ストア（App Store / Google Play）の返金ポリシーに従ってお手続きください。<br>
+                返金をご希望の場合は、App Storeの返金ポリシーに従ってお手続きください。<br>
                 返金が承認された場合、サブスクリプションで付与された未使用の五縁玉は失効します。
             </td>
         </tr>
@@ -222,13 +196,28 @@
         <tr>
             <th>対応OS</th>
             <td>
-                ・iOS 14.0以降<br>
-                ・Android 7.0以降
+                ・iOS 15.6以降
             </td>
         </tr>
         <tr>
             <th>必要な環境</th>
             <td>インターネット接続（購入処理・データ同期に必要）</td>
+        </tr>
+    </table>
+
+    <h2>販売業者情報</h2>
+    <table>
+        <tr>
+            <th>所在地／電話番号</th>
+            <td>請求があった場合、遅滞なく開示いたします</td>
+        </tr>
+        <tr>
+            <th>メールアドレス</th>
+            <td><a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></td>
+        </tr>
+        <tr>
+            <th>販売業者／運営統括責任者</th>
+            <td>DAIJI IMAI</td>
         </tr>
     </table>
 
