サブスク対応

--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@
                 </div>
                 <a href="support.html" class="card-link">Get Support</a>
             </div>
+
+            <div class="card">
+                <div class="card-icon">&#128176;</div>
+                <div class="card-title">特定商取引法</div>
+                <div class="card-description">
+                    サブスクリプション「月結び」に関する特定商取引法に基づく表示（日本向け）
+                </div>
+                <a href="tokutei.html" class="card-link">View Details</a>
+            </div>
         </div>
 
         <div class="contact-box">
@@ -214,11 +223,11 @@
 
         <div class="footer">
             <p>
-                &copy; 2025 DAIJI IMAI. All rights reserved.<br>
+                &copy; 2026 DAIJI IMAI. All rights reserved.<br>
                 TokoyoMusubi Shrine is available on the Apple App Store.
             </p>
             <p style="color: #AAA; font-size: 0.85em; margin-top: 15px;">
-                Last Updated: December 2025
+                Last Updated: January 2026
             </p>
         </div>
     </div>
