--- a/support.html
+++ b/support.html
@@ -103,6 +103,7 @@
         <a href="index.html">Home</a>
         <a href="privacy-policy.html">Privacy Policy</a>
         <a href="terms-of-service.html">Terms of Service</a>
+        <a href="tokutei.html">特定商取引法</a>
         <a href="support.html">Support</a>
     </div>
 
@@ -191,7 +192,7 @@
     <div class="footer">
         <img src="tokoyomusubi_shrine_singaku.png" alt="TokoyoMusubi Shrine" style="width: 80px; margin-bottom: 10px;">
         <p style="margin: 5px 0;">TokoyoMusubi Shrine</p>
-        <p style="font-size: 0.75em; color: #999;">&copy; 2025 DAIJI IMAI</p>
+        <p style="font-size: 0.75em; color: #999;">&copy; 2026 DAIJI IMAI</p>
     </div>
 
 </body>
