--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -99,11 +99,12 @@
         <a href="index.html">Home</a>
         <a href="privacy-policy.html">Privacy Policy</a>
         <a href="terms-of-service.html">Terms of Service</a>
+        <a href="tokutei.html">特定商取引法</a>
         <a href="support.html">Support</a>
     </div>
 
     <h1>Terms of Service</h1>
-    <p class="last-updated">Last Updated: December 2025</p>
+    <p class="last-updated">Last Updated: January 2026</p>
 
     <p>These Terms of Service ("Terms") govern your use of the TokoyoMusubi Shrine mobile application ("the App"). By downloading or using the App, you agree to these Terms.</p>
 
@@ -147,39 +148,86 @@
     <h2>5. Visual Content</h2>
     <p>Some visual content in the App may be created or assisted using generative technologies for presentation purposes.</p>
 
-    <h2>6. Advertising</h2>
+    <h2>6. Subscription Service (Monthly Musubi / 月結び)</h2>
+
+    <h3>6.1 Service Overview</h3>
+    <p>TokoyoMusubi Shrine offers an optional monthly subscription service called "Monthly Musubi" (月結び).</p>
+    <ul>
+        <li><strong>Price:</strong> ¥300/month (tax included, auto-renewing)</li>
+        <li><strong>Benefit:</strong> 62 Go-enn Coin granted upon each renewal</li>
+        <li><strong>Go-enn Coin validity:</strong> 2 months from grant date (subscription-granted coins only)</li>
+        <li><strong>Maximum balance:</strong> 200 Go-enn Coin (subscription-granted coins only)</li>
+    </ul>
+
+    <h3>6.2 Go-enn Coin (五縁玉)</h3>
+    <p>Go-enn Coin is an in-app currency used for premium features such as omikuji (fortune telling) and special offerings.</p>
+    <ul>
+        <li>Go-enn Coin cannot be exchanged for cash or refunded</li>
+        <li>Go-enn Coin cannot be transferred to other users</li>
+        <li>Consumption order: Ad-earned Go-enn Coin first, then oldest expiring batch</li>
+        <li>Expired Go-enn Coin will be automatically removed</li>
+    </ul>
+
+    <h3>6.3 Cancellation</h3>
+    <ul>
+        <li>You may cancel your subscription at any time through App Store settings</li>
+        <li>Cancellation takes effect at the end of the current billing period</li>
+        <li>Subscription-granted Go-enn Coin can still be used until their expiration date</li>
+    </ul>
+
+    <h3>6.4 Refunds</h3>
+    <ul>
+        <li>Refund requests are subject to the policies of App Store</li>
+        <li>Upon refund approval, subscription-granted Go-enn Coin will be forfeited</li>
+        <li>No partial refunds or pro-rated credits are provided</li>
+    </ul>
+
+    <h3>6.5 Data Synchronization</h3>
+    <ul>
+        <li><strong>Norito (custom prayers):</strong> Stored locally only and will NOT sync across devices</li>
+        <li><strong>Go-enn Coin balance:</strong> May be synced via optional account linking (Apple ID or Google account). Sync availability depends on feature implementation status.</li>
+    </ul>
+
+    <h3>6.6 Platform Transfer Limitations</h3>
+    <ul>
+        <li>Subscriptions cannot be transferred between iOS and Android platforms</li>
+        <li>Go-enn Coin balance may be retained across platforms if account linking is available and enabled</li>
+        <li>To continue subscription on a different platform, you must subscribe again on that platform</li>
+    </ul>
+
+    <h2>7. Advertising</h2>
     <p>The App may display third-party advertisements.</p>
     <ul>
         <li>Advertisement content is provided by external services</li>
         <li>TokoyoMusubi Shrine is not responsible for the content of third-party ads</li>
     </ul>
 
-    <h2>7. Intellectual Property</h2>
+    <h2>8. Intellectual Property</h2>
     <p>All content and software within the App are owned by or licensed to the developer and are protected by applicable intellectual property laws.</p>
 
-    <h2>8. User Content</h2>
+    <h2>9. User Content</h2>
     <p>The App does not allow users to submit, upload, or share content. All app-related data remains on the user's device unless otherwise stated.</p>
 
-    <h2>9. Privacy</h2>
+    <h2>10. Privacy</h2>
     <p>Use of the App is governed by the <a href="privacy-policy.html">Privacy Policy</a>. Please review it to understand how information is handled.</p>
 
-    <h2>10. Disclaimers</h2>
+    <h2>11. Disclaimers</h2>
     <p>The App is provided on an "as is" and "as available" basis. No warranties are made regarding availability, accuracy, or reliability.</p>
 
-    <h2>11. Limitation of Liability</h2>
+    <h2>12. Limitation of Liability</h2>
     <p>To the maximum extent permitted by law, TokoyoMusubi Shrine shall not be liable for indirect or consequential damages arising from the use or inability to use the App.</p>
 
-    <h2>12. Termination</h2>
+    <h2>13. Termination</h2>
     <p>You may stop using the App at any time by uninstalling it.</p>
     <p>TokoyoMusubi Shrine reserves the right to discontinue or suspend the App at any time.</p>
 
-    <h2>13. Changes to Terms</h2>
+    <h2>14. Changes to Terms</h2>
     <p>These Terms may be updated periodically. Continued use of the App after updates constitutes acceptance of the revised Terms.</p>
 
-    <h2>14. Governing Law</h2>
+    <h2>15. Governing Law</h2>
     <p>These Terms are governed by the laws of Japan.</p>
 
-    <h2>15. Contact</h2>
+    <h2>16. Contact</h2>
     <div class="contact">
         <p>If you have questions about these Terms, please contact:</p>
         <p><strong>Email:</strong> <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></p>
@@ -188,7 +236,7 @@
     <div class="footer">
         <img src="tokoyomusubi_shrine_singaku.png" alt="TokoyoMusubi Shrine" style="width: 80px; margin-bottom: 10px;">
         <p style="margin: 5px 0;">TokoyoMusubi Shrine</p>
-        <p style="font-size: 0.75em; color: #999;">&copy; 2025 DAIJI IMAI</p>
+        <p style="font-size: 0.75em; color: #999;">&copy; 2026 DAIJI IMAI</p>
     </div>
 
 </body>
