アカウント連携見送り、RevenewCat記載、他調整

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -61,7 +61,7 @@
             margin-bottom: 8px;
         }
         .contact {
-            background-color: #FFF9E6;
+            background-color: rgba(255, 249, 230, 0.5);
             border-left: 4px solid #FFD700;
             padding: 15px;
             border-radius: 5px;
@@ -85,7 +85,7 @@
             color: #FFD700;
         }
         .highlight-box {
-            background-color: #E8F5E9;
+            background-color: rgba(232, 245, 233, 0.5);
             border-left: 4px solid #4CAF50;
             padding: 15px;
             border-radius: 5px;
@@ -212,6 +212,19 @@
     <p>Data is stored on Google's servers. For details, please refer to:</p>
     <ul>
         <li><a href="https://firebase.google.com/support/privacy" target="_blank">Firebase Privacy Policy</a></li>
+    </ul>
+
+    <h3>3.5 RevenueCat</h3>
+    <p>This app uses RevenueCat for subscription and in-app purchase management.</p>
+    <ul>
+        <li><strong>Purchase Processing</strong>: RevenueCat validates purchase receipts and manages subscription status</li>
+        <li><strong>Anonymous User ID</strong>: An anonymous identifier is used to track purchases (not linked to your identity)</li>
+        <li><strong>Subscription Restoration</strong>: Purchase history is stored on RevenueCat servers, enabling subscription restoration across reinstalls via the "Restore Purchases" feature</li>
+    </ul>
+    <p>Note: While subscription status can be restored through RevenueCat, Go-enn Coin balance is linked to your Firebase anonymous account and cannot be recovered after reinstalling the app.</p>
+    <p>For details, please refer to:</p>
+    <ul>
+        <li><a href="https://www.revenuecat.com/privacy" target="_blank">RevenueCat Privacy Policy</a></li>
     </ul>
 
     <h2>4. Your Privacy Choices</h2>
