--- a/support.html
+++ b/support.html
@@ -47,14 +47,14 @@
             text-decoration: underline;
         }
         .contact {
-            background-color: #FFF9E6;
+            background-color: rgba(255, 249, 230, 0.5);
             border-left: 4px solid #FFD700;
             padding: 15px;
             border-radius: 5px;
             margin-top: 20px;
         }
         .faq-item {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.5);
             padding: 15px;
             border-radius: 5px;
             margin-bottom: 15px;
