--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -61,7 +61,7 @@
             margin-bottom: 8px;
         }
         .contact {
-            background-color: #FFF9E6;
+            background-color: rgba(255, 249, 230, 0.5);
             border-left: 4px solid #FFD700;
             padding: 15px;
             border-radius: 5px;
@@ -170,28 +170,29 @@
 
     <h3>6.3 Cancellation</h3>
     <ul>
-        <li>You may cancel your subscription at any time through App Store settings</li>
+        <li>You may cancel your subscription at any time through App Store (iOS) or Google Play (Android) settings</li>
         <li>Cancellation takes effect at the end of the current billing period</li>
         <li>Subscription-granted Go-enn Coin can still be used until their expiration date</li>
     </ul>
 
     <h3>6.4 Refunds</h3>
     <ul>
-        <li>Refund requests are subject to the policies of App Store</li>
+        <li>Refund requests are subject to the policies of App Store (iOS) or Google Play (Android)</li>
         <li>Upon refund approval, subscription-granted Go-enn Coin will be forfeited</li>
         <li>No partial refunds or pro-rated credits are provided</li>
     </ul>
 
-    <h3>6.5 Data Synchronization</h3>
+    <h3>6.5 Data Storage and Restoration</h3>
     <ul>
+        <li><strong>Subscription status:</strong> Managed by RevenueCat and can be restored after reinstalling the app using the "Restore Purchases" feature within the app</li>
+        <li><strong>Go-enn Coin balance:</strong> Linked to an anonymous account that exists only on your device. If you uninstall or reinstall the app, your Go-enn Coin balance will be permanently lost and cannot be recovered, even if you restore your subscription</li>
         <li><strong>Norito (custom prayers):</strong> Stored locally only and will NOT sync across devices</li>
-        <li><strong>Go-enn Coin balance:</strong> May be synced via optional account linking (Apple ID or Google account). Sync availability depends on feature implementation status.</li>
     </ul>
 
     <h3>6.6 Platform Transfer Limitations</h3>
     <ul>
         <li>Subscriptions cannot be transferred between iOS and Android platforms</li>
-        <li>Go-enn Coin balance may be retained across platforms if account linking is available and enabled</li>
+        <li>Go-enn Coin balance cannot be transferred between platforms or devices</li>
         <li>To continue subscription on a different platform, you must subscribe again on that platform</li>
     </ul>
 
