--- a/tokutei.html
+++ b/tokutei.html
@@ -90,7 +90,7 @@
             background-color: rgba(255, 255, 255, 0.5);
         }
         .note {
-            background-color: #FFF9E6;
+            background-color: rgba(255, 249, 230, 0.5);
             border-left: 4px solid #FFD700;
             padding: 15px;
             border-radius: 5px;
@@ -152,7 +152,8 @@
             <th>支払方法</th>
             <td>
                 ・Apple App Store（iOS）<br>
-                ※App Storeに登録されているお支払い方法が利用可能です
+                ・Google Play Store（Android）<br>
+                ※各ストアに登録されているお支払い方法が利用可能です
             </td>
         </tr>
         <tr>
@@ -173,8 +174,9 @@
         <tr>
             <th>解約方法</th>
             <td>
-                App Storeのサブスクリプション管理画面から解約できます<br>
-                ・iOS: 設定 → Apple ID → サブスクリプション
+                各ストアのサブスクリプション管理画面から解約できます<br>
+                ・iOS: 設定 → Apple ID → サブスクリプション<br>
+                ・Android: Google Play → お支払いと定期購入 → 定期購入
             </td>
         </tr>
         <tr>
@@ -196,7 +198,8 @@
         <tr>
             <th>対応OS</th>
             <td>
-                ・iOS 15.6以降
+                ・iOS 15.6以降<br>
+                ・Android 10以降
             </td>
         </tr>
         <tr>
@@ -224,7 +227,8 @@
     <div class="note">
         <strong>ご注意</strong><br>
         ・サブスクリプションはiOSとAndroid間で共有・移行できません。異なるプラットフォームでご利用の場合は、それぞれで契約が必要です。<br>
-        ・五縁玉残高はアカウント連携（Apple ID / Googleアカウント）により、プラットフォーム間で引き継げる場合があります（機能の実装状況によります）。<br>
+        ・サブスクリプションの購入状態は、アプリ内の「復元」機能で再インストール後も復元できます。<br>
+        ・五縁玉残高はデバイス上の匿名アカウントに紐づいています。アプリを削除・再インストールすると、サブスクリプションを復元しても五縁玉残高は完全に失われ、復元できません。<br>
         ・祝詞（カスタム祈願文）はデバイスにローカル保存され、複数デバイス間での同期はできません。
     </div>
 
