--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             margin-top: 30px;
         }
         .card {
-            background-color: #FAFAFA;
+            background-color: rgba(250, 250, 250, 0.5);
             border-radius: 8px;
             padding: 25px;
             text-align: center;
@@ -109,12 +109,12 @@
             background-color: #8B1A1A;
         }
         .app-info {
-            background: linear-gradient(135deg, #FAFAFA 0%, #F0F0F0 100%);
+            background: linear-gradient(135deg, rgba(250, 250, 250, 0.5) 0%, rgba(240, 240, 240, 0.5) 100%);
             padding: 25px;
             border-radius: 8px;
             margin-top: 40px;
             text-align: center;
-            border: 1px solid #E0E0E0;
+            border: 1px solid rgba(224, 224, 224, 0.5);
         }
         .app-info h2 {
             color: #B22222;
@@ -137,7 +137,7 @@
             background-color: #DAA520;
         }
         .contact-box {
-            background-color: #FFF9E6;
+            background-color: rgba(255, 249, 230, 0.5);
             border-left: 4px solid #FFD700;
             padding: 15px;
             margin-top: 30px;
