AI読み解き追記

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -148,9 +148,37 @@
     <h2>5. Visual Content</h2>
     <p>Some visual content in the App may be created or assisted using generative technologies for presentation purposes.</p>
 
-    <h2>6. Subscription Service (Monthly Musubi / 月結び)</h2>
+    <h2>6. AI-Generated Content</h2>
 
-    <h3>6.1 Service Overview</h3>
+    <h3>6.1 AI Reading of Omikuji</h3>
+    <p>When you draw an omikuji, the App may provide an AI reading of the fortune text. This reading takes into account your Go-enn Norito (prayer/wish) to offer personalized context.</p>
+
+    <h3>6.2 Disclaimer</h3>
+    <ul>
+        <li>AI-generated content is provided for reference purposes only</li>
+        <li>The accuracy, completeness, or appropriateness of AI readings is not guaranteed</li>
+        <li>AI readings should not be relied upon for making important life decisions</li>
+        <li>TokoyoMusubi Shrine is not responsible for any actions taken based on AI-generated content</li>
+    </ul>
+
+    <h3>6.3 User Responsibilities</h3>
+    <ul>
+        <li>Users must comply with all applicable laws and regulations</li>
+        <li>Users should not input content that promotes violence, illegal activities, self-harm, or harm to others</li>
+        <li>Inappropriate input may result in generic responses or service restrictions</li>
+        <li>Please avoid including personal identifying information in your Go-enn Norito, as this text is processed by Google's AI services</li>
+    </ul>
+
+    <h3>6.4 Data Handling</h3>
+    <ul>
+        <li>Go-enn Norito (prayer/wish) and omikuji text are sent to Google's AI services for processing</li>
+        <li>No personal identifying information is intentionally sent to AI services by the app</li>
+        <li>AI readings are not stored on our servers</li>
+    </ul>
+
+    <h2>7. Subscription Service (Monthly Musubi / 月結び)</h2>
+
+    <h3>7.1 Service Overview</h3>
     <p>TokoyoMusubi Shrine offers an optional monthly subscription service called "Monthly Musubi" (月結び).</p>
     <ul>
         <li><strong>Price:</strong> ¥300/month (tax included, auto-renewing)</li>
@@ -159,7 +187,7 @@
         <li><strong>Maximum balance:</strong> 200 Go-enn Coin (subscription-granted coins only)</li>
     </ul>
 
-    <h3>6.2 Go-enn Coin (五縁玉)</h3>
+    <h3>7.2 Go-enn Coin (五縁玉)</h3>
     <p>Go-enn Coin is an in-app currency used for premium features such as omikuji (fortune telling) and special offerings.</p>
     <ul>
         <li>Go-enn Coin cannot be exchanged for cash or refunded</li>
@@ -168,67 +196,67 @@
         <li>Expired Go-enn Coin will be automatically removed</li>
     </ul>
 
-    <h3>6.3 Cancellation</h3>
+    <h3>7.3 Cancellation</h3>
     <ul>
         <li>You may cancel your subscription at any time through App Store (iOS) or Google Play (Android) settings</li>
         <li>Cancellation takes effect at the end of the current billing period</li>
         <li>Subscription-granted Go-enn Coin can still be used until their expiration date</li>
     </ul>
 
-    <h3>6.4 Refunds</h3>
+    <h3>7.4 Refunds</h3>
     <ul>
         <li>Refund requests are subject to the policies of App Store (iOS) or Google Play (Android)</li>
         <li>Upon refund approval, subscription-granted Go-enn Coin will be forfeited</li>
         <li>No partial refunds or pro-rated credits are provided</li>
     </ul>
 
-    <h3>6.5 Data Storage and Restoration</h3>
+    <h3>7.5 Data Storage and Restoration</h3>
     <ul>
         <li><strong>Subscription status:</strong> Managed by RevenueCat and can be restored after reinstalling the app using the "Restore Purchases" feature within the app</li>
         <li><strong>Go-enn Coin balance:</strong> Linked to an anonymous account that exists only on your device. If you uninstall or reinstall the app, your Go-enn Coin balance will be permanently lost and cannot be recovered, even if you restore your subscription</li>
         <li><strong>Norito (custom prayers):</strong> Stored locally only and will NOT sync across devices</li>
     </ul>
 
-    <h3>6.6 Platform Transfer Limitations</h3>
+    <h3>7.6 Platform Transfer Limitations</h3>
     <ul>
         <li>Subscriptions cannot be transferred between iOS and Android platforms</li>
         <li>Go-enn Coin balance cannot be transferred between platforms or devices</li>
         <li>To continue subscription on a different platform, you must subscribe again on that platform</li>
     </ul>
 
-    <h2>7. Advertising</h2>
+    <h2>8. Advertising</h2>
     <p>The App may display third-party advertisements.</p>
     <ul>
         <li>Advertisement content is provided by external services</li>
         <li>TokoyoMusubi Shrine is not responsible for the content of third-party ads</li>
     </ul>
 
-    <h2>8. Intellectual Property</h2>
+    <h2>9. Intellectual Property</h2>
     <p>All content and software within the App are owned by or licensed to the developer and are protected by applicable intellectual property laws.</p>
 
-    <h2>9. User Content</h2>
-    <p>The App does not allow users to submit, upload, or share content. All app-related data remains on the user's device unless otherwise stated.</p>
+    <h2>10. User Content</h2>
+    <p>The App does not allow users to submit, upload, or share content publicly. User-entered Go-enn Norito (prayer/wish) is processed as described in Section 6. Other app-related data remains on the user's device unless otherwise stated.</p>
 
-    <h2>10. Privacy</h2>
+    <h2>11. Privacy</h2>
     <p>Use of the App is governed by the <a href="privacy-policy.html">Privacy Policy</a>. Please review it to understand how information is handled.</p>
 
-    <h2>11. Disclaimers</h2>
+    <h2>12. Disclaimers</h2>
     <p>The App is provided on an "as is" and "as available" basis. No warranties are made regarding availability, accuracy, or reliability.</p>
 
-    <h2>12. Limitation of Liability</h2>
+    <h2>13. Limitation of Liability</h2>
     <p>To the maximum extent permitted by law, TokoyoMusubi Shrine shall not be liable for indirect or consequential damages arising from the use or inability to use the App.</p>
 
-    <h2>13. Termination</h2>
+    <h2>14. Termination</h2>
     <p>You may stop using the App at any time by uninstalling it.</p>
     <p>TokoyoMusubi Shrine reserves the right to discontinue or suspend the App at any time.</p>
 
-    <h2>14. Changes to Terms</h2>
+    <h2>15. Changes to Terms</h2>
     <p>These Terms may be updated periodically. Continued use of the App after updates constitutes acceptance of the revised Terms.</p>
 
-    <h2>15. Governing Law</h2>
+    <h2>16. Governing Law</h2>
     <p>These Terms are governed by the laws of Japan.</p>
 
-    <h2>16. Contact</h2>
+    <h2>17. Contact</h2>
     <div class="contact">
         <p>If you have questions about these Terms, please contact:</p>
         <p><strong>Email:</strong> <a href="mailto:lexipecid@gmail.com">lexipecid@gmail.com</a></p>
